[package]
name = "bevy_keyframe"
version = "0.1.0"
edition = "2024"

[features]
firewheel = ["dep:firewheel"]

[dependencies]
bevy_ecs = "0.16"
bevy_app = "0.16"
bevy_math = "0.16"
bevy_color = "0.16"
bevy_platform = "0.16"
bevy_time = "0.16"

# optional
firewheel = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_mesh_picking_backend",
  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "webgl2",
  "x11",
] }
